--- a/src/styles/css/basket.css
+++ b/src/styles/css/basket.css
@@ -1,9 +1,7 @@
 .basket {
   background-color: #fff;
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  position: fixed;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
@@ -25,6 +23,7 @@
   background-color: #fff;
   z-index: 105;
   width: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -40,7 +39,7 @@
   top: 0;
   right: 0;
   background-color: #90c8c8;
-  height: 100%;
+  height: 100vh;
   width: 20px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -71,7 +70,7 @@
           align-items: center;
   margin: 0;
   width: 100%;
-  padding: 2rem 1.2rem;
+  padding: 0.4rem 1.2rem;
   background-color: rgba(144, 200, 200, 0.5);
 }
 
