--- a/src/styles/sass/basket.scss
+++ b/src/styles/sass/basket.scss
@@ -1,7 +1,7 @@
 .basket {
   background-color: #fff;
   position: absolute;
-  display: flex;
+  position: fixed;
   align-items: stretch;
   z-index: 100;
   transform: translatex(-100%);
@@ -15,6 +15,7 @@
     background-color: #fff;
     z-index: 105;
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -24,7 +25,7 @@
     top: 0;
     right: 0;
     background-color: rgb(144, 200, 200);
-    height: 100%;
+    height: 100vh;
     width: 20px;
     transform: translateX(100%);
     box-shadow: 0.5rem 0 2rem rgba(0, 0, 0, 0.5);
@@ -46,7 +47,7 @@
     align-items: center;
     margin: 0;
     width: 100%;
-    padding: 2rem 1.2rem;
+    padding: 0.4rem 1.2rem;
     background-color: rgba(144, 200, 200, 0.5);
   }
 
