moved app into client folder and started adding express routes

--- a/client/src/styles/sass/shopList.scss
+++ b/client/src/styles/sass/shopList.scss
@@ -2,7 +2,7 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  width: 900px;
+  width: var(--content-width);
   margin: auto;
 
   &__noresults {
