--- a/client/src/styles/css/shopList.css
+++ b/client/src/styles/css/shopList.css
@@ -5,7 +5,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 900px;
+  width: var(--content-width);
   margin: auto;
 }
 
